--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0 auto;
     padding: 0;
-    max-width: 70%;
+    max-width: 75%;
     background: lightgrey;
 }
 
@@ -15,6 +15,11 @@ main {
 
 .nav-item, .navbar-brand {
     margin: 5px 15px;
+}
+
+.section-title {
+    text-align: center;
+    margin: 20px auto;
 }
 
 /* || Hero Section */
@@ -43,6 +48,28 @@ main {
 }
 
 /* || Our Story Section */
+.column {
+    float: left;
+    height: 450px;
+    width: 45%;
+    margin: 20px auto;
+    padding: 10px;
+    background: pink;
+}
+
+.our-story-img {
+    background-image: url('../img/3-pig-project.jpg');
+    background-size: cover;
+}
+
+.row {
+}
+
+/* || Footer */
+footer {
+    margin: 0;
+    padding: 0;
+}
 /* 
 .navbar {
     display: flex;
