added more styling, moving on to next page to make sure i meat quota

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,10 @@ main {
 
 .hero-item {
     width: 50%;
+    margin: 0 20px;
+    padding: 15px;
+    border-radius: 15px;
+    background: rgb(255, 255, 255, 0.75);
 }
 
 .hero-btn {
