--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,38 @@ textarea {
     resize: none;
 }
 
+/* || Products Page */
+.product-title {
+    text-align: center;
+}
+
+.card-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.cards {
+    flex: 20%;
+    width: 20%;
+    height: 100%;
+    margin: 15px;
+    display: block;
+    background: white;
+}
+
+.cards-body {
+    margin: 0;
+
+}
+
+.cards-body img {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
 /* || Footer */
 footer {
     text-align: center;
