--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* || Root */
 :root {
-    --pink: #FDD7E4;
+    --pink: #ED7F8D;
 }
 
 * {
@@ -44,6 +44,7 @@ main {
 /* || Hero Section */
 .hero-section {
     display: flex;
+    /* border: thick solid var(--pink); */
     background-image: url('../img/cover-img.jpeg');
     background-position: center;
     background-size: cover;
@@ -120,11 +121,13 @@ textarea {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .cards {
+    border-radius: 10px;
     flex: 20%;
-    width: 20%;
+    max-width: 20%;
     height: 100%;
     margin: 15px;
     display: block;
@@ -133,14 +136,28 @@ textarea {
 
 .cards-body {
     margin: 0;
-
+    padding: 5px;
 }
 
 .cards-body img {
+    min-height: 30vh;
     margin: 0;
-    padding: 0;
-    height: 100%;
     width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+.card-title {
+    font-size: 20px;
+    text-align: center;
+}
+
+.card-info {
+
+}
+
+.card-price {
+    text-align: right;
+    margin-bottom: 0;
 }
 
 /* || Footer */
@@ -152,3 +169,10 @@ footer {
     color: white;
     height: 100%;
 }
+
+
+/* || Notes for future
+1. Make the entire page have a thicker pink border on left and right
+
+
+*/
