started media queries

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -1,23 +1,27 @@
-/* || Media Query @ 1024px*/
-
+/* || @ 1024px*/
 @media screen and (max-width: 1024px) {
-/* || Hero Section */
-.hero-section {
-    height: 400px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    /* || Body Styles */
+    body {max-width: 85%;}
+
+    /* || Hero Section */
+    .hero-section {
+        height: 400px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero-item {width: 75%;}
+
+    .hero-title {font-size: 25px;}
+
+    .hero-item p {font-size: 15px;}
 }
 
-.hero-btn {
-    outline: none;
-    border: none;
-    border-radius: 10px;
-    height: 35px;
-    width: 50%;
-    background: pink;
-    cursor: pointer;
-}
-
-
+/* || @ 768px */
+@media screen and (max-width: 768px) {
+    /* || Navbar */
+    .navbar-brand {
+        font-size: 20px;
+    }
 }
