--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,24 @@ main {
     background: var(--black);
 }
 
+.header {
+    font-size: 2rem;
+    background: var(--white);
+    color: var(--black);
+    text-align: center;
+    margin: 0;
+    padding: 15px 0;
+}
+
+.header-alt {
+    font-size: 2rem;
+    background: var(--black);
+    color: var(--pink);
+    text-align: center;
+    margin: 0;
+    padding: 15px 0;
+}
+
 .border-radius {
     border-radius: 10px;
 }
@@ -186,13 +204,14 @@ main {
     padding: 5px 0;
 }
 
+iframe {
+    width: 100%;
+    height: 85%;
+}
+
 form {
     padding: 5px;
     background: var(--black);
-}
-
-form button {
-    display: block;
 }
 
 form label, form input, form textarea, form button {
@@ -207,8 +226,14 @@ form input, textarea {
 
 form button {
     border: thin solid var(--black);
-    background-color: var(--pink);
+    background: var(--pink);
     padding: 5px 0;
+    transition: 0.3s;
+}
+
+form button:hover {
+    background: var(--white);
+    color: var(--black);
 }
 
 textarea {
@@ -218,32 +243,18 @@ textarea {
 /* || Product Page */
 .menu-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 10px 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
 }
 
 .menu-container-item {
     width: 300px;
     height: 200px;
+    margin: 0;
     background: var(--white);
 }
 
 /* || About Us */
-.about-hero {
-    background: var(--white);
-    text-align: center;
-    padding: 25px 0 30px 0;
-}
-
-.about-hero img {
-    width: 75%;
-    height: auto;
-    margin: 10px auto;
-    padding: 0;
-    display: block;
-    box-shadow: 0 5px 10px var(--black);
-}
-
 .about-hero p {
     font-size: 20px;
 }
@@ -260,6 +271,7 @@ textarea {
 
 .about-info {
     padding: 25px 0;
+    background: var(--white);
 }
 
 .about-info p {
@@ -271,14 +283,15 @@ textarea {
 }
 
 .about-values {
-    background: var(--white);
+    background: var(--black);
+    color: var(--white);
     padding: 0;
 }
 
 .about-values-p {
     width: 75%;
     margin: 0 auto;
-    padding: 10px 0;
+    padding: 25px 0;
     text-align: center;
     line-height: 1.75em;
 }
@@ -299,8 +312,8 @@ textarea {
 footer {
     text-align: center;
     margin: 0 auto;
-    height: 5vh;
+    padding: 10px;
     width: 100%;
     background: var(--black);
-    color:  var(--pink);
+    color:  var(--white);
 }
