--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,16 +242,35 @@ textarea {
 
 /* || Product Page */
 .menu-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
+    background: var(--white);
+    margin: 0 auto;
+    padding: 25px;
+    width: 90%;
+    border: 15px double var(--pink);
 }
 
-.menu-container-item {
-    width: 300px;
-    height: 200px;
+.menu-title {
+    font-size: 30px;
+    padding: 15px 0;
+    text-align: center;
+}
+
+.menu-item {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 3px dotted var(--pink);
     margin: 0;
-    background: var(--white);
+    padding: 5px 0;
+}
+
+.item-name {
+    font-size: 20px;
+}
+
+.item-price {
+    font-size: 20px;
 }
 
 /* || About Us */
