425px screen size start

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -88,3 +88,10 @@
         margin: 5px 0;
     }
 }
+
+/* || @ 425px */
+@media screen and (max-width: 425px) {
+    body {
+        max-width: 95%;
+    }
+}
