disabled mobile parallax error

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -27,6 +27,11 @@
 
 /* || @ 768px */
 @media screen and (max-width: 768px) {
+    /* || Parallax */
+    .parallax, .parallax-2 {
+        background-attachment: inherit;
+    }
+
     /* || Navbar */
     .navbar-brand {
         font-size: 20px;
