fixing parallax for real this time

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -30,6 +30,7 @@
     /* || Parallax */
     .parallax, .parallax-2 {
         background-attachment: inherit;
+        background-size: contain;
     }
 
     /* || Navbar */
